--- a/plugins/ivanti_service_manager/requirements.txt
+++ b/plugins/ivanti_service_manager/requirements.txt
@@ -1,3 +1,5 @@
 # List third-party dependencies here, separated by newlines. 
 # All dependencies must be version-pinned, eg. requests==1.2.0
 # See: https://pip.pypa.io/en/stable/user_guide/#requirements-files
+timeout-decorator==0.5.0
+parameterized==0.8.1
