--- a/plugins/cybereason/requirements.txt
+++ b/plugins/cybereason/requirements.txt
@@ -2,3 +2,4 @@
 # All dependencies must be version-pinned, eg. requests==1.2.0
 # See: https://pip.pypa.io/en/stable/user_guide/#requirements-files
 validators==0.17.0
+parameterized==0.8.1
