--- a/plugins/zoom/plugin.spec.yaml
+++ b/plugins/zoom/plugin.spec.yaml
@@ -40,6 +40,13 @@ connection:
     type: credential_secret_key
     required: false
     example: 'dBs0x4Kf7HuIK0LLbzMduW'
+  authentication_retry_limit:
+    title: OAuth Authentication Retry Limit
+    description: How many times to retry authentication to Zoom before failing, required for OAuth authentication
+    type: integer
+    required: false
+    default: 5
+    example: 5
   jwt_token:
     title: JWT Token
     description: Zoom JWT token, without the Bearer prefix
