Updated review comments

--- a/plugins/armorblox/plugin.spec.yaml
+++ b/plugins/armorblox/plugin.spec.yaml
@@ -6,6 +6,7 @@ title: Armorblox
 description: Armorblox secures enterprise communications over email and other cloud office applications with the power of Natural Language Understanding. The Armorblox platform connects over APIs and analyzes thousands of signals to understand the context of communications and protect people and data from compromise. Over 56,000 organizations use Armorblox to stop BEC and targeted phishing attacks, protect sensitive PII and PCI, and automate remediation of user-reported email threats. Armorblox was featured in the 2019 Forbes AI 50 list and was named a 2020 Gartner Cool Vendor in Cloud Office Security. Founded in 2017, Armorblox is headquartered in Sunnyvale, CA and backed by General Catalyst and Next47
 version: 1.0.0
 vendor: armorblox
+author_email: app-publishers@armorblox.com
 support: rapid7
 supported_versions: ["1.0.0"]
 status: []
@@ -50,13 +51,13 @@ types:
       required: false    
   engagement:
     fwd_mail_count:
-      title: Mail Count
-      description: Mail Count
+      title: Forwarded Mail Count
+      description: Forwarded Mail Count
       type: string
       required: false
     reply_mail_count:
-      title: Mail Count
-      description: Mail Count
+      title: Reply Mail Count
+      description: Reply Mail Count
       type: string
       required: false
   incident:
@@ -157,7 +158,7 @@ connection:
     description: Armorblox Tenant Name
     type: string
     required: true
-    example: outbound-integrations
+    example: my-tenant-name
   api_key:
     type: credential_secret_key
     title: Armorblox API Key
